[project]
name = "kaptive"
authors = [
    {name="Tom Stanton", email="tomdstanton@gmail.com"},
]
description = "In silico serotyping"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
dependencies = ["biopython", "numpy"]
keywords = ["bioinformatics", "serotyping", "microbiology"]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

]
dynamic = ["version"]

[project.scripts]
kaptive = "kaptive.cli:cli"

[project.urls]
Homepage = "https://kaptive.readthedocs.io"
Repository = "https://github.com/klebgenomics/Kaptive"
Documentation = "https://kaptive.readthedocs.io"

[dependency-groups]
test = ["pytest"]
docs = ["mkdocs", "mkdocs-material", "mkdocs-api-autonav", "mkdocs-include-markdown-plugin", "termynal"]
dev = [{include-group = "test"}, {include-group = "docs"}]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kaptive/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kaptive"]
include = ["src/kaptive/data/*", ]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "src"]
